fixes overlap

--- a/components/Home/SupportSystem/SupportSystem.module.css
+++ b/components/Home/SupportSystem/SupportSystem.module.css
@@ -60,7 +60,7 @@
   }
 
   .spacer.last {
-    height: 40vh;
-    width: 40vw;
+    height: 60vh;
+    width: 60vw;
   }
 }
